# hw22

./: .env.sample  README.md  catalog.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  blogs.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_image_and_more.py  0003_alter_product_price.py  0004_alter_product_options_product_is_published.py  0005_product_owner.py  0006_alter_product_is_published.py
catalog/templates/: contacts.html  home.html  product_detail.html  products.html  products_list.html
catalog/templates/catalog/: product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: user_form.html
