[tool.poetry]
name = "hw22"
version = "0.1.0"
description = ""
authors = ["Nikita <example@mail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
ipython = "^8.32.0"
black = "^25.1.0"
django = "4.2.2"
dotenv = "^0.9.9"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
